echo build tag added

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,6 +11,7 @@ pipeline {
             steps {
                 script {
                     def buildTag = "build-${BUILD_NUMBER}"
+                    sh "echo Creating tag ${buildTag}"
                     sh "git tag -a ${buildTag} -m 'Jenkins build ${BUILD_NUMBER}'"
                     sh "git push origin ${buildTag}"
                 }
