--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Build and Test') {
             steps {
-                sh 'mvn clean package'
+                sh "mvn clean package"
             }
         }
         stage('Create Git Tag') {
@@ -12,18 +12,22 @@ pipeline {
                 script {
                     def buildTag = "build-${BUILD_NUMBER}"
                     sh "echo Creating tag ${buildTag}"
-                    sh "git tag -a ${buildTag} -m 'Jenkins build ${BUILD_NUMBER}'"
+                    sh "git tag -a ${buildTag} -m "Jenkins build ${BUILD_NUMBER}""
                     sh "git push origin ${buildTag}"
                 }
             }
         }
         stage('Build and Push Docker Image') {
             steps {
-                sh 'docker login -u mahaarunachalam -p dckr_pat_Kiveg21MryV2aptjdom8IvsQTJA'
-                sh 'docker build -t jenkinsmaven .'
-                sh 'docker tag jenkinsmaven:latest my-registry/jenkinsmaven:build-${BUILD_NUMBER}'
-                sh 'docker push mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER}'
-                sh 'docker run -p 8080:8080 -d mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER}'
+                sh "docker login -u mahaarunachalam -p dckr_pat_Kiveg21MryV2aptjdom8IvsQTJA"
+                sh "docker build -t jenkinsmaven ."
+                sh "docker tag jenkinsmaven:latest my-registry/jenkinsmaven:build-${BUILD_NUMBER}"
+                sh "docker push mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER}"
+                //stop and remove the container if already running with previous build number tag
+                
+                // sh "docker stop $(docker ps -a -q --filter ancestor=mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER} --format="{{.ID}}")"
+                // sh "docker rm $(docker ps -a -q --filter ancestor=mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER} --format="{{.ID}}")"
+                sh "docker run -p 8080:8080 -d mahaarunachalam/jenkinsmaven:build-${BUILD_NUMBER}"
             }
         }
 
