--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,8 @@ pipeline {
     stages {
         stage('Build and Test') {
             steps {
+                //clear the workspace
+                sh "rm -rf *"
                 //mvn clean package say version 17 not supported
                 sh "mvn clean package"
             }
